--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/ssr": "^19.2.8",
     "bootstrap": "^5.3.5",
     "express": "^4.18.2",
+    "jspdf": "^3.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -32,6 +33,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^18.18.0",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
